--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -48,7 +48,7 @@ services:
   
   watchtower:
     image: containrrr/watchtower:latest
-    container_name: watchtower
+    container_name: stremio-watchtower
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     command: >
